[package]
name = "ip-command"
version = "0.1.0"
authors = ["fsyncd"]
description = "A Rust wrapper around the Linux ip(8) command. Show / manipulate routing, network devices, interfaces and tunnels."
repository = "https://github.com/fsyncd/ip-command.git"
license = "Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
snafu = "0.6.2"
tokio = { version = "0.2.11", features = ["full"] }

[dev-dependencies]
regex = "1.3.4"

[[bin]]
name = "namespaced_process"
path = "src/command/test_fixture/namespaced_process.rs"